# waterfowl

./: .gitignore  README.md  TODO.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
dev/: seed.ts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  state.rs  types.rs
src-tauri/src/commands/: connections.rs  mod.rs  queries.rs
src-tauri/src/drivers/: mod.rs
src-tauri/src/drivers/postgres/: decode.rs  mod.rs
src/components/: DatabaseDashboard.module.css  DatabaseDashboard.tsx  SchemaSidebar.module.css  SchemaSidebar.tsx  SqlEditorTab.module.css  SqlEditorTab.tsx
src/components/sql-editor/: SqlEditor.module.css  SqlEditor.tsx  SqlEditor.types.ts  index.ts
src/components/sql-editor/engines/: CodeMirrorEngine.tsx
src/components/ui/: Button.module.css  DataTable.module.css  DataTable.tsx  Input.module.css  Input.tsx  Skeleton.module.css  TabBar.tsx  TableRow.tsx  Toast.module.css  Toast.tsx
src/components/ui/button/: Button.module.css  Button.tsx
src/components/ui/data-table/: DataTable.tsx
src/components/ui/dialog/: ConfirmDialog.module.css  ConfirmDialog.tsx
src/components/ui/input/: Input.module.css
src/components/ui/skeleton/: Skeleton.tsx
src/components/ui/tabs/: TabBar.module.css  TabBar.tsx
src/components/ui/toast/: Toast.tsx
src/context/: ConnectionsContext.tsx  TabContext.tsx  ToastContext.tsx
src/layouts/: AppLayout.module.css  AppLayout.tsx
src/pages/: ConnectionDetails.module.css  ConnectionDetails.tsx  NewConnection.tsx  SqlEditorPage.module.css  SqlEditorPage.tsx  Welcome.module.css  Welcome.tsx
src/services/: connections.ts  database.ts
src/styles/: design-tokens.css  global.css
src/types/: sql.ts
src/utils/: sql.ts
(+12 files in other folders)
